mod IFRA table hardcodés

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1298,7 +1298,7 @@ crossorigin=""/>
   <p>Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. Attention cependant, le 49 th arrive prochainement. </p>
 <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
 <div class="table-responsive-sm"><table>
-   <caption class="caption">Liste des produits finis regroupés par catégories</caption> 
+   <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
         <tr>
             <th>Catégories</th>
             <th>Produits Finis</th>
@@ -1349,12 +1349,14 @@ crossorigin=""/>
         </tr>
 </table></div>
 
-<p class="mt-5">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
+<p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
+<p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 <div class="table-responsive-sm"><table class="table">
-   <caption class="caption">Liste des produits interdits d'utilisation par l'IFRA</caption> 
+  
+   <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
-            <th>Ingrédient</th>
-            <th class="">N°CAS</th>
+            <th>Ingredient</th>
+            <th class="">N° CAS</th>
             <th>Spécifications</th>
         </tr>
         <tr>
@@ -1795,6 +1797,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
   <p lang="fr">A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m <sup>2</sup> d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </p>
   <p lang="en">Sensitive to its time, close to all of the beautiful perfumery actors and passionates, Cinquième Sens is putting all its know-how and experience to offer an innovative, unique and reachable place. Here are 80 m<sup>2</sup> of space, on bottom of the Eiffel Tower, including three levels of access, in the more flexible way : Olfawork, Olfaction and Olfalab. </p>
+
   <p lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></p>
   <p lang="en">To find out more about Cinquième Sens and its co-working space, follow the link to the <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">website</a></p>
 </div>
@@ -1804,7 +1807,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal">Fermer</button>
+  <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
 </div> <!-- fin footer -->
 
 </div>
