--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -38,7 +38,7 @@ crossorigin=""/>
     <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
   </button>
   <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right p-0" aria-labelledby="dropdownSearchButton-sm">
-    <div class=""><input lang="fr" id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /><input lang="en" id="searchinput-sm" type="search" class="my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." /></div>
+    <div class=""><input lang="fr" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /><input lang="en" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." /></div>
   </form>
 </div>
 <div class="dropdown pl-1">
@@ -89,7 +89,8 @@ crossorigin=""/>
   <div class="col-12 text-center align-self-start">
   <!--Recherche -->
   <form class="" action="" autocomplete="off" id="searchForm">
-    <input id="searchinput" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
+    <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
+    <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
   </form>
   </div>
 </div>
@@ -377,7 +378,7 @@ crossorigin=""/>
       <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
-
+<br />
 <button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
       </div>
 
@@ -583,11 +584,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
-    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="true" class="nav-link active" id="pills-tab6"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link" id="pills-tab6"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
   </div>
 </nav>
@@ -847,11 +848,11 @@ crossorigin=""/>
   <div class="collapse navbar-collapse" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
     <li class="nav-item">
-      <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="false" class="nav-link" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+      <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link" id="pills-tab1 active"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
     <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab7"><span lang="fr">Chimie</span><span lang="en">Synthesis</span></a></li>
     <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab8"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab10"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
-    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="true" class="nav-link active" id="pills-tab11"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
+    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link" id="pills-tab11"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
   </div>
 </nav>
