--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -848,7 +848,7 @@ crossorigin=""/>
   <div class="collapse navbar-collapse" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
     <li class="nav-item">
-      <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link" id="pills-tab1 active"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+      <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
     <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab7"><span lang="fr">Chimie</span><span lang="en">Synthesis</span></a></li>
     <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab8"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab10"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
