change the title of the page when switching languages

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -9,7 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title>ScenTree - Classification innovante des ingrédients parfum</title>
+<title lang="fr">ScenTree - Classification innovante des ingrédients parfum</title>
+<title lang="en">ScenTree - The new collaborative perfumery raw materials classification</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
