--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -563,9 +563,9 @@ crossorigin=""/>
 <div class="modal-header">
   <div class="container-fluid  d-inline-block">
 <div class="row">
-  <div class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
-    <span id="modaltitle" class="modal-title "></span>
-  </div>
+  <h1 class="col-12 col-md-6  font-weight-bold text-size-20px   text-center-before-md text-align-left-strictly-after-md">
+	 <span id="modaltitle" class="modal-title "></span>
+  </h1>
   <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
   <span id="modalheader-type" class="modalheader-type2"></span>
   </div>
@@ -583,15 +583,15 @@ crossorigin=""/>
     
   </button>
   
-  <div class="collapse navbar-collapse" id="navbarForNaturelles">
+  <h4 class="collapse navbar-collapse text-size-16px" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+	  <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
     <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link" id="pills-tab6"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
-  </div>
+  </h4>
 </nav>
 </div>
 <!--contenu des onglets-->
@@ -604,24 +604,24 @@ crossorigin=""/>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent" >
   
-  <p class="item"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b>
-<span id="modalbody-tenue" class="textitem" ></span></span></p>
+	<p><h2 class="item d-inline"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></h2>
+	<span id="modalbody-tenue" class="textitem" ></span></span></p>
   
-  <p class="item"><span><b lang="fr"> Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b>
-<span id="modalbody-price" class="textitem"></span></span></p>
+	<p><h2 class="item d-inline"><span><b lang="fr"> Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></h2>
+	<span id="modalbody-price" class="textitem"></span></span></p>
 
-<p class="item"><span><b lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><b lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b><span id="modalbody-componat" class="textitem2"></span></span></p>
+	<p><h2 class="item d-inline"><span><b lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><b lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></h2><span id="modalbody-componat" class="textitem2"></span></span></p>
 
 </div>
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
 
-<p class="item"><span><b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b><b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b>
+	<p><h1 class="item d-inline"><span><b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b><b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></h1>
 <span id="modalbody-cas" class="textitem"></span></span></p>
 
-<p class="item"><span><b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b><b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b>
+	<p><h2 class="item d-inline"><span><b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b><b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b></h2>
 <span id="modalbody-aspect" class="textitem"></span></span></p>
 
-<p class="item"><span><b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b><b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b>
+	<p><h2 class="item d-inline"><span><b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b><b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></h2>
 <span id="modalbody-stab" class="textitem"></span></span></p>
 
 </div>
