better SEO for the natural modal

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -780,10 +780,10 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  <p class="item"><span><b lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><b lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b>
+	<p><h2 class="item d-inline"><span><b lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><b lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b></h2>
     <span id="modalbody-utilisation" class="textitem"></span></span></p>
   
-  <p class="item"><span><b lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b><b lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b>
+	<p><h2 class="item d-inline"><span><b lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b><b lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></h2>
     <span id="modalbody-remarques" class="textitem"></span></span></p>
 </div>
 </div> 
