--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -524,12 +524,12 @@ crossorigin=""/>
 <div class="modal-header">
 <div class="container-fluid  d-inline-block">
 <div class="row">
-  <div class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
+  <h1 class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
     <span id="modaltitle2" class="modal-title modal-title1"></span>
-  </div>
-  <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+  </h1>
+  <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
     <span id="modalheader-type2" class="modalheader-type"></span>
-  </div>
+  </h3>
 </div>
 </div>
 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
