--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -584,7 +584,7 @@ crossorigin=""/>
     
   </button>
   
-  <h4 class="collapse navbar-collapse text-size-16px" id="navbarForNaturelles">
+  <h3 class="collapse navbar-collapse text-size-16px" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
     <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
@@ -592,7 +592,7 @@ crossorigin=""/>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
     <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link" id="pills-tab6"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
-  </h4>
+  </h3>
 </nav>
 </div>
 <!--contenu des onglets-->
@@ -770,7 +770,7 @@ crossorigin=""/>
 </div>
 </div>
 
-<p><h2 class="item d-inline"><span><b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b></h2><span id="modalbody-allergenes" class="textitem"></span></span></p>
+<p><h1 class="item d-inline"><span><b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b></h1><span id="modalbody-allergenes" class="textitem"></span></span></p>
 
 </div>    
 </div>   
@@ -848,7 +848,7 @@ crossorigin=""/>
   <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForSynthetiques" aria-controls="navbarForSynthetiques" aria-expanded="false" aria-label="Toggle navigation"><span lang="fr">Veuillez sélectionner une catégorie..</span><span lang="en">Please select a category..</span>
   </button>
   
-  <h4 class="collapse navbar-collapse" id="navbarForSynthetiques">
+  <h3 class="collapse navbar-collapse text-size-16px" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
     <li class="nav-item">
       <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
@@ -857,7 +857,7 @@ crossorigin=""/>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab10"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
     <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link" id="pills-tab11"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
-  </h4>
+  </h3>
 </nav>
 </div>
 <!--contenu des onglets-->
