Type en h3 et ajout point de fusion

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -567,9 +567,9 @@ crossorigin=""/>
   <h1 class="col-12 col-md-6  font-weight-bold text-size-20px   text-center-before-md text-align-left-strictly-after-md">
    <span id="modaltitle" class="modal-title "></span>
   </h1>
-  <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+  <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
   <span id="modalheader-type" class="modalheader-type2"></span>
-  </div>
+  </h3>
   <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
 </div>
 </div>
@@ -831,9 +831,9 @@ crossorigin=""/>
   <h1 class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
     <span id="modaltitle1" class="modal-title"></span>
   </h1>
-  <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+  <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
     <span id="modalheader-type1" class="modalheader-type2"></span>
-  </div>
+  </h3>
   <div id="modaltitle1-fili" class="col-12  Filiation  text-size-16px text-center"></div>
 </div>
 </div>
@@ -883,6 +883,9 @@ crossorigin=""/>
 
   <p><h2 class="item d-inline"><span><b lang="fr">Formule Brute <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><b lang="en">Molecular formula <sup class="fas fa-question-circle icone" title="Formula giving the atoms of the studies molecules."></sup> :</b></h2>
     <span id="modalbody-fbrute1" class="textitem"></span></span></p>
+
+  <p><h2 class="item d-inline"><span><b lang="fr">Point de Fusion <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><b lang="en">Fusion Point <sup class="fas fa-question-circle icone" title="Formula giving the atoms of the studies molecules."></sup> :</b></h2>
+    <span id="modalbody-fpoint" class="textitem"></span></span></p>
 </div>
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
   <p><h2 class="item d-inline"><span><b lang="fr">Densité <sup class="fas fa-question-circle icone" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b><b lang="en">Density <sup class="fas fa-question-circle icone" title="A no-unit data giving the mass of raw material for a given volume (d = 1,5 means 1 mL = 1,5g)."></sup> :</b></h2>
