Point de fusion et stabilité rajouté

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -884,10 +884,12 @@ crossorigin=""/>
   <p><h2 class="item d-inline"><span><b lang="fr">Formule Brute <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><b lang="en">Molecular formula <sup class="fas fa-question-circle icone" title="Formula giving the atoms of the studies molecules."></sup> :</b></h2>
     <span id="modalbody-fbrute1" class="textitem"></span></span></p>
 
-  <p><h2 class="item d-inline"><span><b lang="fr">Point de Fusion <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><b lang="en">Fusion Point <sup class="fas fa-question-circle icone" title="Formula giving the atoms of the studies molecules."></sup> :</b></h2>
+  <p><h2 class="item d-inline"><span><b lang="fr">Point de Fusion <sup class="fas fa-question-circle icone" title="Température à une pression donnée, à laquelle un composé chimique fond, c'est-à-dire passe de l'état solide à l'état liquide."></sup> :</b><b lang="en">Fusion Point <sup class="fas fa-question-circle icone" title="Temperature at a given pressure at which a chemical compound melts, i.e. changes from solid to liquid state."></sup> :</b></h2>
     <span id="modalbody-fpoint" class="textitem"></span></span></p>
+
 </div>
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
+
   <p><h2 class="item d-inline"><span><b lang="fr">Densité <sup class="fas fa-question-circle icone" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b><b lang="en">Density <sup class="fas fa-question-circle icone" title="A no-unit data giving the mass of raw material for a given volume (d = 1,5 means 1 mL = 1,5g)."></sup> :</b></h2>
     <span id="modalbody-densite1" class="textitem"></span></span></p>
   
@@ -902,6 +904,10 @@ crossorigin=""/>
   
   <p><h2 class="item d-inline"><b lang="fr">Masse Molaire <sup class="fas fa-question-circle icone" title="Indice sur la taille de la molécule (et souvent sa volatilité), donné en g/mol."></sup> :</b><b lang="en">Molecular Weight <sup class="fas fa-question-circle icone" title="Indication on the size of the molecule (and its volatility), given in g/mol."></sup> :</b></h2>
     <span id="modalbody-mmolaire1" class="textitem"></span></span></p>
+
+  <p><h2 class="item d-inline"><span><b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b><b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></h2>
+<span id="modalbody-stab" class="textitem"></span></span></p>
+    
 </div>
 <div id="modalbody-pict1" class="imgmp col-12 col-sm-12 col-lg-4 order-first order-sm-first order-lg-last"></div>
 </div>
