--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -885,7 +885,7 @@ crossorigin=""/>
     <span id="modalbody-fbrute1" class="textitem"></span></span></p>
 
   <p><h2 class="item d-inline"><span><b lang="fr">Point de Fusion <sup class="fas fa-question-circle icone" title="Température à une pression donnée, à laquelle un composé chimique fond, c'est-à-dire passe de l'état solide à l'état liquide."></sup> :</b><b lang="en">Fusion Point <sup class="fas fa-question-circle icone" title="Temperature at a given pressure at which a chemical compound melts, i.e. changes from solid to liquid state."></sup> :</b></h2>
-    <span id="modalbody-fpoint" class="textitem"></span></span></p>
+    <span id="modalbody-fusionp1" class="textitem"></span></span></p>
 
 </div>
 <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
@@ -906,7 +906,7 @@ crossorigin=""/>
     <span id="modalbody-mmolaire1" class="textitem"></span></span></p>
 
   <p><h2 class="item d-inline"><span><b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b><b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></h2>
-<span id="modalbody-stab" class="textitem"></span></span></p>
+<span id="modalbody-stab1" class="textitem"></span></span></p>
     
 </div>
 <div id="modalbody-pict1" class="imgmp col-12 col-sm-12 col-lg-4 order-first order-sm-first order-lg-last"></div>
