Small beug fixed

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -336,7 +336,7 @@ crossorigin=""/>
   </p>
   <p><b><span lang="fr">Fiches de données de sécurité :</span><span lang="en">Safety data sheets : </span></b>
 
-  <span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.></span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</p>
+  <span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</p>
   
   <p lang="fr"><b>Autres sources d'informations :</b></p>
   <p lang="en"><b>Other sources of information :</b></p>
@@ -1818,7 +1818,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 <!-- MODAL Cinquième Sens -->
 
 <div class="modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal-dialog modal-md" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
