--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1818,7 +1818,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 <!-- MODAL Cinquième Sens -->
 
 <div class="modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
-<div class="modal-dialog modal-md" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
