--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -217,7 +217,7 @@ crossorigin=""/>
 </div>
 
 <div class="papernote">
-  <p lang="fr"><i class='fas fa-search-location fa-fw fa-lg icone'></i>&nbsp;La mise en forme de la classification <b><i>Scentree</i></b> est inspirée de celle de <a href="http://lifemap.univ-lyon1.fr/explore.html" target ="_BLANK">LifeMap</a> crée par Mr. De Vienne pour l'université de Lyon I. Le concept est similaire à des cartographies telles que celles rencontrées dans Open Street Maps: l'exploration se fait par le biais de zooms et d'interactions avec des images.</p>
+  <p lang="fr"><i class='fas fa-search-location fa-fw fa-lg icone'></i>&nbsp;La mise en forme de la classification <b><i>ScenTree</i></b> est inspirée de celle de <a href="http://lifemap.univ-lyon1.fr/explore.html" target ="_BLANK">LifeMap</a> crée par Mr. De Vienne pour l'université de Lyon I. Le concept est similaire à des cartographies telles que celles rencontrées dans Open Street Maps: l'exploration se fait par le biais de zooms et d'interactions avec des images.</p>
   <p lang="en"><i class='fas fa-search-location fa-fw fa-lg icone'></i>&nbsp;<i><b>ScenTree</b></i>’s shaping is inspired by the <a href="http://lifemap.univ-lyon1.fr/explore.html" target ="_BLANK">LifeMap</a>, created by M. De Vienne from the University of Lyon I. This concept is quite similar to the ones met on cartographies as Open Street Maps: exploration is made through zooms and interactions with images.</p>
 </div>
 
