add a padding in they support us

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -376,7 +376,9 @@ crossorigin=""/>
   <p lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
   <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
-
+    </div>
+    <div class="row">
+      <div class="col-12">
       <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
