--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -377,7 +377,7 @@ crossorigin=""/>
   <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="height: 20px;">
       <div class="col-12">
       <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
