--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -373,18 +373,18 @@ crossorigin=""/>
   <p lang="fr"> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail.  </p>
   <p lang="en"> <i><b>ScenTree</b></i> was imagined and conceived by two MSc students of the ISIPCA, Maxime BAUD and Thomas ESPINASSE. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </p>
   <br>
-  <p lang="fr" style="margin-bottom: 10px;"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
-  <p lang="en" style="margin-bottom: 10px;"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
+  <p lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
+  <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
 
-      <div class="col-12 col-lg-6">
+      <div class="col-12 col-lg-5">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
 <br />
 <button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
       </div>
 
-      <div class="col-12 col-lg-6">
+      <div class="col-12 col-lg-7">
   <p lang="fr"><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
   <p lang="en"><b><i class="text-underline">Professionals who participated to the incrementation of the ScenTree database :</i></b> </p>
   <uL>
