--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -377,7 +377,7 @@ crossorigin=""/>
   <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
 
-      <div class="col-12 col-lg-5">
+      <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
 <br />
@@ -385,8 +385,8 @@ crossorigin=""/>
       </div>
 
       <div class="col-12 col-lg-7">
-  <p lang="fr"><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
-  <p lang="en"><b><i class="text-underline">Professionals who participated to the incrementation of the ScenTree database :</i></b> </p>
+  <p lang="fr"><b><i class="text-underline">Professionnels ayant participé à la base de données ScenTree</i></b> </p>
+  <p lang="en"><b><i class="text-underline">Professionals who participated to the ScenTree database :</i></b> </p>
   <uL>
     <li>ASTORRI Marc<i class="profession"><span lang="fr"> (Apprenti Parfumeur)</span><span lang="en"> (Ex-Perfumer Apprentice)</span></i></li>
     <li>CERVI Yohan<i class="profession"><span lang="fr"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en"> (Director of Creation at MAELSTROM Parfumeurs)</span></i></li>
