--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -377,6 +377,8 @@ crossorigin=""/>
   <p lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</p>
       </div>
 
+<div class="col-12" style="height: 20px;"></div>
+
       <div class="col-12 col-lg-6">
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
