--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -851,7 +851,6 @@ crossorigin=""/>
     <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab7"><span lang="fr">Chimie</span><span lang="en">Synthesis</span></a></li>
     <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab8"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab10"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
-    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link" id="pills-tab11"><span lang="fr">Fournisseurs</span><span lang="en">Suppliers</span></a></li>
   </ul>
   </h3>
 </nav>
@@ -1083,7 +1082,14 @@ crossorigin=""/>
 </div> <!--fin modal-body-->
 
 <div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
+  <div class="container-fluid">
+<div class="row">
+<div class="col-lg-12">
+  <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+  <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
+</div>
+</div>
+</div>
 </div> <!-- fin footer -->
 </div> <!-- fin content -->
 </div> <!-- fin container -->
