--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1064,17 +1064,6 @@ crossorigin=""/>
 </div>
 </div>
 
-<!-- onglet fournisseurs -->
-<div class="tab-pane fade" id="tab11info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-5">
-<div class="container-fluid">
-<div class="row">
-<div class="col-lg-12">
-  <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-  <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
-</div>
-</div>
-</div>
-</div>
 
 </div><!--fin content -->
 </div><!--fin panel-body-->
@@ -1083,14 +1072,13 @@ crossorigin=""/>
 
 <div class="modal-footer">
   <div class="container-fluid">
-<div class="row">
-<div class="col-lg-12">
-  <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-  <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+  <p class="textitem">
+    <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+    <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span></p>
 </div>
 </div>
-</div>
-</div> <!-- fin footer -->
+</div> <!--fin footer-->
 </div> <!-- fin content -->
 </div> <!-- fin container -->
 </div> 
