--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -587,7 +587,7 @@ crossorigin=""/>
   </button>
   
   <h3 class="collapse navbar-collapse text-size-16px" id="navbarForNaturelles">
-  <ul id="ongletsnat" class="navbar-nav nav nav-tabs nav-fill nav-justified  mx-auto" role="tablist">
+  <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-fill nav-justified  mx-auto" role="tablist">
     <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
