--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -383,7 +383,7 @@ crossorigin=""/>
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
 <br>
-<p class="row" style="background-color: red;" >
+<p class="row col-12" style="background-color: red;" >
   <button class="btn col-offset-1 col-2" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
   <button class="btn col-offset-1 col-2" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
 </p>  
