--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -383,10 +383,9 @@ crossorigin=""/>
 <p lang="fr"><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <p lang="en"><b><i class="text-underline">Partner companies : </i></b> </p>
 <br>
-<p class="row col-12">
+<div class="row col-12">
   <button class="btn col-offset-3 col-2" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
-  <button class="btn col-offset-1 col-2" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
-</p>  
+</div>  
       </div>
 
       <div class="col-12 col-lg-6">
