Rajout d'une classe "scroll-bar-inside2"

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -289,7 +289,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Sources</h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside">
+<div class="modal-body text-size-14px text-justify scrollbar-inside2">
   
 <div class="source">
   <p lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </p>
@@ -366,7 +366,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside">
+<div class="modal-body text-size-14px text-justify scrollbar-inside2">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
@@ -450,7 +450,7 @@ crossorigin=""/>
   <h4 class="text-center modal-title modal-title1"><span lang="fr">Les ingrédients du ScenTree</span><span lang="en">List of ingredients</span></h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside">
+<div class="modal-body text-size-14px text-justify scrollbar-inside2">
   
 <div class="row">
 <div class="col-lg-6 text-center">
@@ -482,7 +482,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1"><span lang="fr">Les familles et descripteurs olfactifs du ScenTree</span><span lang="en">Olfactive families and descriptions of Scentree </span></h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside">
+<div class="modal-body text-size-14px text-justify scrollbar-inside2">
 <div class="container-fluid">
   
   <p lang="fr">Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
@@ -1103,7 +1103,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">Mentions Légales</h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside">
+<div class="modal-body text-size-14px text-justify scrollbar-inside2">
   <p>En vertu du règlement (EU-RGPD) 2016/679 du Parlement Européen et du Conseil du 27 avril 2016 relatif à la protection des personnes physiques à l’égard du traitement des données à caractère personnel et à la libre circulation de ces données, et abrogeant la directive 95/46/CE (Règlement Général sur la Protection des Données) et conformément aux dispositions des articles 6-III et 19 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous portons à la connaissance des utilisateurs et visiteurs du site internet <a href="http://scentree.co/" target="_BLANK">scentree.co</a> les informations suivantes.</p>
   
   <ol>
@@ -1322,7 +1322,7 @@ crossorigin=""/>
   <h4 class="text-center  modal-title modal-title1">IFRA</h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside">
+<div class="modal-body text-size-14px text-justify scrollbar-inside2">
 
   <p>Fondé en 1973, l’IFRA (<i>International Fragrance Association</i>) est une association qui représente l’industrie du parfum à l’international et qui a développé et implémenté un Code de
   Pratique permettant d’<b>Assurer que les parfums soient sans danger pour le consommateur</b>. </p>
@@ -1829,7 +1829,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
   <p lang="fr">A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m <sup>2</sup> d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </p>
   <p lang="en">Sensitive to its time, close to all of the beautiful perfumery actors and passionates, Cinquième Sens is putting all its know-how and experience to offer an innovative, unique and reachable place. Here are 80 m<sup>2</sup> of space, on bottom of the Eiffel Tower, including three levels of access, in the more flexible way : Olfawork, Olfaction and Olfalab. </p>
-
+  <br>
   <p lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></p>
   <p lang="en">To find out more about Cinquième Sens and its co-working space, follow the link to the <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">website</a></p>
 </div>
