--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -281,7 +281,7 @@ crossorigin=""/>
 <!--MODAL SOURCE--> 
 
 <div class="modal" tabindex="-1" role="dialog" id="lesSources">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
   
 <div class="modal-header d-block">
