--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -295,6 +295,8 @@ crossorigin=""/>
   <p lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </p>
   <p lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </p>
 
+<div class="col-12" style="height: 20px;"></div>
+
   <p><b><span lang="fr">Ouvrages : </span><span lang="en">Books : </span></b>
   <uL>      
     <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
