--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -389,7 +389,6 @@ crossorigin=""/>
 
 <div class="row col-12">
   <button class="btn col-6" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
-  <button class="btn col-6" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
 </div>  
       </div>
 
@@ -1097,7 +1096,7 @@ crossorigin=""/>
 <!-- MODAL MENTIONS LÉGALES -->
 
 <div class="modal" tabindex="-1" role="dialog" id="lesMentionsLegales">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
