--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -488,6 +488,7 @@ crossorigin=""/>
   
   <p lang="fr">Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
    <p lang="en"><i>Scentree</i> project is using a pool of olfactive families and descriptors to classify the whole raw materials available on the website. Find them below :</p>
+<div class="col-12" style="height: 10px;"></div>
 <div class="row">   
 <div class="col-lg-6 text-center">
   <b><u><span lang="fr">Familles Principales :</span><span lang="en">Families : </span></u></b>
