first draw of 'you can zoom' box

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -147,6 +147,11 @@ crossorigin=""/>
 
 <div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
 
+<div id="you_can_zoom">
+        <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="close_you_can_zoom"><span aria-hidden="true">&times;</span></button>
+	<p>Zommez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
+</div>
+
 <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
 <div id="blanc1" class="row blockrgpd"></div>
 <div id="contenant" class="row">
