--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -149,7 +149,7 @@ crossorigin=""/>
 
 <div id="you_can_zoom">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="close_you_can_zoom"><span aria-hidden="true">&times;</span></button>
-  <p lang="fr" style="padding: 5%;">Zoomez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
+  <p lang="fr">Zoomez et cliquez sur les descripteurs ou les ingrédients souhaités</p>
   <p lang="en">Zoom and click on the wanted descriptor or ingredient</p>
 </div>
 
