--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -53,7 +53,7 @@ crossorigin=""/>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesSources"><span lang="fr">Sources</span><span lang="en">Sources</span></button>
 
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />AN</label>
+      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
       <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
     </div>
 
@@ -78,7 +78,7 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-start">
   <div class="clearfix w-100">
-    <button class="btn to_english_button text-in-color-brown float-right" type="button">EN</button>
+    <button class="btn to_english_button text-in-color-brown float-right" type="button"><img src="../img/france.jpg" alt="ScenTree en français"></button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button text-in-color-brown float-right" type="button">FR</button>
   </div>
