--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -78,10 +78,10 @@ crossorigin=""/>
 
 <div class="row h-25 align-items-start">
   <div class="clearfix w-100">
-    <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.jpg" alt="ScenTree in english" class="imgen">
+    <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
     </button>
     <button class="btn text-in-color-brown float-right px-0">/</button>
-    <button class="btn to_french_button float-right" type="button"><img src="../img/france.jpg" alt="ScenTree en français"  class="imgfr"></button>
+    <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></button>
 </div>
