--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1336,13 +1336,15 @@ crossorigin=""/>
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
 
   <p>Fondé en 1973, l’IFRA (<i>International Fragrance Association</i>) est une association qui représente l’industrie du parfum à l’international et qui a développé et implémenté un Code de
-  Pratique permettant d’<b>Assurer que les parfums soient sans danger pour le consommateur</b>. </p>
-  <p>Les standards émis par l’association peuvent limiter ou interdire l’utilisation de certains ingrédients de parfums, et permettent aux fabricants d’émettre un <b>certificat IFRA</b>. Ce dernier permet au fabricant d’assurer à son client que son produit est conforme aux standards de l’industrie. </p>
-  <p>Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. Attention cependant, le 49 th arrive prochainement. </p>
+  Pratique permettant d’<b>assurer que les parfums soient sans danger pour le consommateur</b>.
+  <br>
+  Les standards émis par l’association peuvent limiter ou interdire l’utilisation de certains ingrédients de parfums, et permettent aux fabricants d’émettre un <b>certificat IFRA</b>. Ce dernier permet au fabricant d’assurer à son client que son produit est conforme aux standards de l’industrie. 
+  <br>
+  Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. Attention cependant, le 49 th arrive prochainement.</p>
 <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
 
-<div class="table-responsive-sm col-12">
-  <table class="col-offset-1 col-10">
+<div class="table-responsive-sm col-12" style="background-color: blue;">
+  <table class="col-offset-1 col-10" style="background-color: red;">
    <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
         <tr>
             <th>Catégories</th>
