--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1325,7 +1325,7 @@ crossorigin=""/>
 
 <!--MODAL IFRA -->
 <div class="modal" tabindex="-1" role="dialog" id="ifra_modal">
-<div class="modal-dialog modal-xl" role="document">
+<div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
@@ -1340,11 +1340,11 @@ crossorigin=""/>
   <br>
   Les standards émis par l’association peuvent limiter ou interdire l’utilisation de certains ingrédients de parfums, et permettent aux fabricants d’émettre un <b>certificat IFRA</b>. Ce dernier permet au fabricant d’assurer à son client que son produit est conforme aux standards de l’industrie. 
   <br>
-  Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. Attention cependant, le 49 th arrive prochainement.</p>
+  Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. <u>Attention cependant, le 49 th arrive prochainement</u>.</p>
 <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
 
 <div class="table-responsive-sm col-12" style="background-color: blue;">
-  <table class="col-offset-1 col-10" style="background-color: red;">
+  <table class="col-offset-2 col-10" style="background-color: red;">
    <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
         <tr>
             <th>Catégories</th>
